# pstrs

./: .gitignore  Cargo.toml  rustfmt.toml  schema.sql
.sqlx/: query-1a20718e1295c0525fa665b9a1b72312996e9a51e22584d2a5ae75cebdca2051.json  query-8abc32172d9535bbb21ff1eaec8e7d5b2908c96ed030d82061d68b98667159e1.json  query-aadec8c5a9faa3ddeb21c2b5b822fec148139dcbe1a44d55182565518a7c2e1a.json  query-c471dc1c144774b04c10cc4ea973883d273735c91bfb0b9e6f6bf3de0bdc3455.json  query-cd1fc7bca6ffa6cf1c1a3eefaff8d2277cf8dbf7663fb39bfb84b5cf26c3f452.json
src/: app.rs  db.rs  error.rs  ext.rs  highlight.rs  main.rs  models.rs  paste.rs  routes.rs  util.rs
src/routes/: handlers.rs  mod.rs  tests.rs
