[package]
name = "pstrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
axum = "0.6.18"
easy-ext = "1.0.1"
futures-util = "0.3.28"
hyper = "0.14.27"
lazy_static = "1.4.0"
serde = "1.0.183"
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres", "postgres-rustls"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
syntect = "5.1.0"
tokio = "1.28.2"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
strip-ansi-escapes = "0.2.0"